update styling form akun internal dan produk iklan dan juga update pengaturan email vendor lewat email

--- a/public/templates/template_pks.html
+++ b/public/templates/template_pks.html
@@ -221,7 +221,7 @@
         <p>dan</p>
 
         <p><strong>{pt_mitra}</strong>, suatu badan hukum yang berkedudukan di <strong>{kota}</strong>, beralamat di
-            <strong>{alamat}</strong>, diwakili oleh <strong>{pihak_mitra}</strong> selaku <strong>{jabatan}</strong>,
+            <strong>{alamat_pks}</strong>, diwakili oleh <strong>{pihak_mitra}</strong> selaku <strong>{jabatan}</strong>,
             dengan Nomor Induk Kependudukan (NIK): <strong>{nik}</strong>.
         </p>
 
