--- a/views/Email/konfirmasi_email_internal.ejs
+++ b/views/Email/konfirmasi_email_internal.ejs
@@ -68,7 +68,7 @@
   <div class="reset-container">
     <img src="/foto/logo_ngiklanmurah.png" alt="Logo NgiklanMurah" class="reset-logo" />
     <h4>Ganti Password</h4>
-    <form action="/auth/update-password" method="POST">
+    <form action="#" method="POST">
       <input type="hidden" name="token" value="<%= token %>">
 
       <div class="mb-3">
