--- a/views/dashAdmin/navbarDash.ejs
+++ b/views/dashAdmin/navbarDash.ejs
@@ -38,7 +38,7 @@
         </li>
 
         
-        <li><a href="/dashboard/klien"><span class="las la-user"></span> Klien</a></li>
+        <li><a href="/admin/dashboardAdmin/pengaturan-akun"><span class="las la-user"></span>Akun Saya</a></li>
 
 
         <li><a href="/admin/logout">Logout</a></li>
