--- a/views/dashAdmin/penambahanAkun.ejs
+++ b/views/dashAdmin/penambahanAkun.ejs
@@ -144,9 +144,10 @@
       <select name="role" class="js-role">
         <option value="">-- Pilih Role --</option>
         <option value="admin">Admin</option>
-        <option value="project-lead">Project Lead</option>
+        <option value="project lead">Project Lead</option>
         <option value="finance">Finance</option>
         <option value="partnership">Partnership</option>
+        <option value="klien">klien</option>
       </select>
     </div>
   </div>
