--- a/views/dashVendor/navbarVendor.ejs
+++ b/views/dashVendor/navbarVendor.ejs
@@ -19,7 +19,7 @@
                 <span class="lab la-dropbox"></span> Produk <span class="dropdown-arrow"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#">Lihat Pordok</a></li>
+                <li><a href="/vendor/view-produk">Lihat Produk</a></li>
                 <li><a href="/vendor/dashboardVendor/tambahproduk">Tambah Produk</a></li>
             
 
