--- a/views/dashVendor/navbarVendor.ejs
+++ b/views/dashVendor/navbarVendor.ejs
@@ -21,17 +21,19 @@
             <ul class="dropdown-menu">
                 <li><a href="/vendor/view-produk">Lihat Produk</a></li>
                 <li><a href="/vendor/dashboardVendor/tambahproduk">Tambah Produk</a></li>
-            
-
-                <li><a href="#"><span class="las la-user-tie"></span> Vendor</a></li>
             </ul>
         </li>
 
-        <li><a href="#"><span class="las la-balance-scale"></span> Permintaan Pembayaran</a></li>
-      
-        
-        <li><a href="#"><span class="las la-user"></span> Klien</a></li>
-
+         <li class="dropdown">
+            <a href="#" class="dropdown-toggle">
+                <span class="las la-balance-scale"></span> Permintaan Iklan <span class="dropdown-arrow"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="/vendor/ongoing">Dalam Progress</a></li>
+                <li><a href="#">Dibatalkan</a></li>
+                <li><a href="#">Selesai</a></li>
+            </ul>
+        </li>
 
         <li><a href="/vendor/logout">Logout</a></li>
     </ul>
